# ros-ur-project

dual_ur10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dual_ur10_moveit_config/config/: dual_ur10_robot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
dual_ur10_moveit_config/launch/: default_warehouse_db.launch  demo.launch  dual_ur10_robot_moveit_controller_manager.launch.xml  dual_ur10_robot_moveit_planning_execution.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
s2dual_ur10_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
s2dual_ur10_robot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  s2dual_ur10_robot.srdf
s2dual_ur10_robot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  s2dual_ur10_robot_moveit_controller_manager.launch.xml  s2dual_ur10_robot_moveit_planning_execution.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
test_pkg/: CMakeLists.txt  package.xml
test_pkg/launch/: mir_run.launch
test_pkg/meshes/: soda_can1.blend
test_pkg/src/: addCollision.cpp  detect.py  dual_arm.cpp  dual_arm_moveit.cpp  dual_getCurrent.cpp  find_screwhole.cpp  find_screwhole_continue.cpp  getCurrent.cpp  getPose.cpp  io_state.cpp  mir.cpp  pick_place1.cpp  pointcloud.cpp  pres1.cpp  pres2.cpp  sub_findobject2d.cpp  target_pub.cpp  test.cpp  test_83.cpp  test_929.cpp
ur5_rg2_description/: CMakeLists.txt  package.xml
ur5_rg2_description/launch/: display.launch  ur5_upload.launch
ur5_rg2_description/meshes/rg2_gripper/: 11.stl  6_.stl  suoluosi-1.stl  suoluosi-3d(1).stl  suoluosi-3d.stl  xipanjiaju-zu.stl  zuhejiaju.stl
ur5_rg2_description/urdf/: extras_ur5.urdf.xacro  rg2.urdf.xacro  ur5.urdf.xacro  ur5_robot_rg2.urdf  ur5_robot_rg2.urdf.xacro
ur_bringup/launch/: ur5_bringup.launch
ur_description/launch/: dual_ur10_upload.launch  s2dual_ur10_upload.launch  ur3_upload.launch
ur_description/urdf/: dual_ur10_robot.urdf  dual_ur10_robot.urdf.xacro  robot1_endeffector.urdf.xacro  robot1_ur10.urdf.xacro  robot2_endeffector.urdf.xacro  robot2_ur10.urdf.xacro  s2dual_ur10_robot.urdf  s2dual_ur10_robot.urdf.xacro  s2robot1_endeffector.urdf.xacro  s2robot2_endeffector.urdf.xacro  table.urdf.xacro  ur3_base.urdf.xacro  ur3_endeffector.urdf.xacro  ur3_robot_rg2_cam.urdf  ur3_robot_rg2_cam.urdf.xacro
ur_modern_driver/: RG2.h  RG2_Grip.h
ur_modern_driver/launch/: dual_ur10_bringup.launch  s2dual_ur10_bringup.launch  ur10_bringup.launch  ur3_bringup.launch  ur5_bringup.launch
